
ChangeLog
 [ + added, - removed, * changed ]
 * 07Feb2014 Fixed missing include 'stats/MPI/mpi_utils.h' in the distribution 
 + 05Feb2014 Added API call Extrae_flush to force flushing of the calling thread
 * 31Jan2014 Fixed bug that stalled the on-line analysis (on-line root running in double-background was killed by garbage collector)
             Removed unnecessary recursive mutexes.
             Refactored the way the spectral worker emits online events
             Fixed bug in the call to Extrae_define_event_type
             Updated version to 3.0rc5
 * 23Jan2014 Nanos examples for BG/Q
 * 20Jan2014 Added initialization of mutex in the on-line root that went missing in the previous update
             Updated version to 3.0rc4
 + 13Jan2014 Added advanced functionalities in the on-line mode (automatic threshold, conversion from detail to burst, phase profiling)
             Added new MPI statistics
             Changed the management of the HWC_CHANGE_EV
             Updated version to 3.0rc3
 * 09Jan2014 Extended sampling addresses support
 * 07Jan2014 Support up to 256 parameters for Intel OMP/runtime.
 * 18Dec2013 Improved support to instrument OpenCL in Apple machines
 + 04Dec2013 Added example of OpenMP using LD_PRELOAD in Linux
 + 03Dec2013 Added a new configure flag (--with-mpi-lib-name) to force the specific name of the MPI library to link with.
             Changed the mallinfo() wrapper (Extrae_memusage_Wrapper) to emit absolute values instead of deltas.
             Removed the initialization calls to Extrae_memusage_set_to_0_Wrapper().
 * 29Nov2013 Added initial Java instrumentation (--with-java at configure)
             Added initial Extrae command line instrumentation
             Added gettimeofday clock
             Added flag for David Carrera's Hadoop instrumentation (--enable-dcarrera-hadoop)
             Bring MPI I/O instrumentation back to life
 * 22Nov2013 Honor <cuda enabled> and <opencl enabled>