@@ -150,14 +150,22 @@ WRAPPERS_PACX = wrappers/PACX/pacx_wrapper.c wrappers/PACX/pacx_wrapper.h
 # Probes for OpenMP instrumentation
 WRAPPERS_OMP = probes/OMP/omp_probe.c probes/OMP/omp_probe.h \
  wrappers/OMP/omp-common.c wrappers/OMP/omp-common.h \
- wrappers/OMP/omp_wrapper.c wrappers/OMP/omp_wrapper.h \
- wrappers/OMP/gnu-libgomp-4.2.c wrappers/OMP/gnu-libgomp-4.2.h \
- wrappers/OMP/intel-kmpc-11.c wrappers/OMP/intel-kmpc-11.h
+ wrappers/OMP/omp_wrapper.c wrappers/OMP/omp_wrapper.h
+
+if WANT_OPENMP_INTEL
+WRAPPERS_OMP += wrappers/OMP/intel-kmpc-11.c wrappers/OMP/intel-kmpc-11.h
+endif
+
+if WANT_OPENMP_GNU
+WRAPPERS_OMP += wrappers/OMP/gnu-libgomp-4.2.c wrappers/OMP/gnu-libgomp-4.2.h
+endif
 
 if ARCH_POWERPC
 if OS_LINUX
+if WANT_OPENMP_IBM
  WRAPPERS_OMP += wrappers/OMP/ibm-xlsmp-1.6.c wrappers/OMP/ibm-xlsmp-1.6.h
  EXTRA_OMP_CFLAGS = -I/usr/src/linux
+endif
 endif
 endif
 
